# rosbag_direct_write_examples

./: CMakeLists.txt  package.xml
src/: bagger.cpp  common.h  direct_bagger.cpp  reader.cpp
