<?xml version="1.0"?>
<package format="2">
  <name>rosbag_direct_write_examples</name>
  <version>0.0.0</version>
  <description>
    Examples of using rosbag_direct_write versus rosbag_storage API's.
  </description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>Apache 2.0</license>

  <url type="repository">https://github.com/osrf/rosbag_direct_write_examples</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosbag_direct_write</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>